--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,21 +7,22 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Inter var,
+  font-family:
+    "Inter var",
     ui-sans-serif,
     system-ui,
     -apple-system,
     BlinkMacSystemFont,
-    Segoe UI,
+    "Segoe UI",
     Roboto,
-    Helvetica Neue,
+    "Helvetica Neue",
     Arial,
-    Noto Sans,
+    "Noto Sans",
     sans-serif,
-    Apple Color Emoji,
-    Segoe UI Emoji,
-    Segoe UI Symbol,
-    Noto Color Emoji;
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
 }
 
 a {
